# diode

./: Cargo.toml  LICENSE  README.md  bacon.toml
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/file_management/: directory.rs  entry.rs  file.rs  mod.rs  symlink.rs
src/input_handling/: directory.rs  input_handler.rs  mod.rs
src/state/: file_state.rs  file_system_state.rs  mod.rs
src/state/diode/: diode_state.rs  directory_state.rs  entry_state.rs  explorer_state.rs  file_state.rs  focussed_entry.rs  mod.rs  selected_entry.rs  symlink_state.rs
src/state/diode/focussed/: directory.rs
src/state/diode/selected/: directory.rs
src/ui/: app.rs  body.rs  footer.rs  header.rs  mod.rs
src/ui/explorer/: directory.rs  explorer_pane.rs  file.rs  mod.rs  symlink.rs
